# nlp-political-bias-api

./: .gitignore  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
notebooks/: 01_dataset_exploration.ipynb  02_semantic_exploration.ipynb
src/political_bias_api/core/: __init__.py  paths.py
tests/: conftest.py  test_download_corpus.py  test_prepare_corpus.py
training/: download_corpus.py  prepare_corpus.py
