[project]
name = "nlp-political-bias-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.8",
    "gdown>=5.2.0",
    "langchain>=0.3.27",
    "matplotlib>=3.9.4",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
    "umap-learn>=0.5.11",
    "uvicorn>=0.39.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
]
